--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
 .App {
-  text-align: center;
+  /* text-align: center; */
+  /* border: 1px solid red; */
+  margin: 0 auto;
 }
 
-.App-logo {
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -35,4 +37,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
