--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,21 @@
+:root {
+  --primary-color: #4FB518;
+  --gray: #626762;
+  --white: #ffffff;
+}
+
+
 body {
-  margin: 0;
+  margin: 0 auto;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: var(--white);
+  /* border: 1px solid red; */
+  max-width: 1440px;
+  /* font-size: 16px; */
 }
 
 code {
