--- a/src/assets/styles/Navbar.module.css
+++ b/src/assets/styles/Navbar.module.css
@@ -21,8 +21,10 @@
 .navbar_grid_container {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: 0 50px;
   color: var(--gray);
+  
 }
 
 .navbar_grid_container .navbar_grid_left {
@@ -32,6 +34,7 @@
   font-size: 16px;
   line-height: 21px;
   color: var(--gray);
+  font-weight: 500;
 }
 
 .navbar_grid_container .navbar_grid_left .navbar_link {
@@ -46,10 +49,12 @@
 
 .navbar_grid_container .navbar_grid_right {
   display: grid;
-  grid-template-columns: auto auto auto auto;
+  grid-template-columns: auto auto auto;
   gap: 40px;
+  align-items: center;
   font-size: 14px;
   line-height: 18px;
+  font-weight: 500;
 }
 
 .navbar_grid_container .navbar_grid_right .navbar_link {
@@ -59,7 +64,7 @@
 
 .navbar_grid_container .navbar_grid_right .auth_btn_container {
   display: flex;
-  align-items: center;
+  /* align-items: center; */
   justify-content: space-between;
   gap: 12px;
 }
