--- a/src/assets/styles/Auth.module.css
+++ b/src/assets/styles/Auth.module.css
@@ -44,6 +44,67 @@
 }
 
 
+
+/* FOR LOGIN PAGE */
+.login_form_icon_and_title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  /* border: 1px solid red; */
+}
+
+.registration_complete {
+  margin: 32px auto 70px;
+  text-align: center;
+  color: var(--gray);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+}
+
+.login_post_registration {
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 36px;
+  color: var(--dark);
+  text-align: center;
+}
+
+.login_form_input_container {
+  margin-top: 40px;
+  width: 100%;
+  display: grid;
+  gap: 30px;
+}
+
+.login_form_input_container {
+  margin-bottom: 60px;
+}
+
+.forgot_password_post_registration {
+  text-align: center;
+  color: var(--primary-color);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  margin-top: 30px;
+}
+
+.if_new_user {
+  text-align: center;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  color: var(--gray);
+  margin-top: 30px;
+}
+
+
+
+
+
+
 /* // Large devices (desktops, less than 1024px) */
 @media (max-width: 1024px) {
   .auth_container .close_form {
