--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 :root {
   --primary-color: #4FB518;
+  --green-lit: #EDF8E8;
+  --green-dark: #31581C;
   --gray: #626762;
   --white: #ffffff;
   --dark: #1F261E;
