--- a/src/assets/styles/Navbar.module.css
+++ b/src/assets/styles/Navbar.module.css
@@ -24,7 +24,7 @@
   align-items: center;
   padding: 0 50px;
   color: var(--gray);
-  
+
 }
 
 .navbar_grid_container .navbar_grid_left {
@@ -75,21 +75,58 @@
 } */
 
 
+
+/* NAVBAR FOR AUTHED USERS */
+.navbar_authed_user {
+  height: 103px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid var(--border);
+  padding: 0 49px;
+}
+
+.navbar_authed_user .authed_user_title {
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 42px;
+  color: var(--dark);
+}
+
+.navbar_authed_user .flex_container_authed_user {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 30px;
+  cursor: pointer;
+}
+
+.navbar_authed_user .flex_container_authed_user > div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 5px;
+}
+
+
+
+
+
 /* // Large devices (desktops, less than 1024px) */
 @media (max-width: 1024px) {
   .navbar {
     height: 81px;
     grid-template-columns: minmax(139px, 215px) minmax(711px, auto);
   }
-  
+
   .logo {
     padding-left: 30px;
   }
-  
+
   .logo img {
     max-width: 120px;
   }
-  
+
   .navbar_grid_container {
     display: flex;
     justify-content: space-between;
@@ -97,15 +134,15 @@
     padding: 0 30px;
     color: var(--gray);
   }
-  
+
   .navbar_grid_container .navbar_grid_left {
     gap: 25px;
   }
-  
+
   .navbar_grid_container .navbar_grid_right {
     gap: 25px;
   }
-  
+
 }
 
 
@@ -123,4 +160,3 @@
 
 /* // X-Small devices (portrait phones, less than 576px) */
 /* @media (max-width: 575.98px) {  } */
-
