design dashboard grid

--- a/src/assets/styles/Layout.module.css
+++ b/src/assets/styles/Layout.module.css
@@ -14,7 +14,7 @@
 
 .wrapper .main {
   margin-left: 359px;
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 
 .wrapper .main .contents {
