--- a/src/assets/styles/Layout.module.css
+++ b/src/assets/styles/Layout.module.css
@@ -1,6 +1,5 @@
 .wrapper {
   position: relative;
-  /* border: 1px solid red; */
 }
 
 .wrapper .sidebar {
@@ -14,7 +13,6 @@
 
 .wrapper .main {
   margin-left: 359px;
-  /* border: 1px solid red; */
 }
 
 .wrapper .main .contents {
@@ -24,5 +22,17 @@
 
 /* // Large devices (desktops, less than 1024px) */
 @media (max-width: 1024px) {
-
+  .wrapper .sidebar {
+    width: 300px;
+  }
+  
+  .wrapper .main {
+    margin-left: 300px;
+    /* border: 1px solid red; */
+  }
+  
+  .wrapper .main .contents {
+    padding: 0 49px;
+  }
+  
 }
