--- a/src/assets/styles/Dashboard.module.css
+++ b/src/assets/styles/Dashboard.module.css
@@ -11,7 +11,7 @@
   padding: 18px 25px;
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
   justify-content: space-between;
   gap: 50px;
   border: 1px solid var(--border);
