--- a/src/assets/styles/FormInput.module.css
+++ b/src/assets/styles/FormInput.module.css
@@ -20,7 +20,6 @@
   border-radius: 10px;
   background-color: var(--white);
   border: 1px solid var(--border);
-  box-sizing: border-box;
 }
 
 .form_label .input:focus {
@@ -32,3 +31,51 @@
   color: var(--danger);
   font-size: 14px;
 }
+
+
+
+
+/* // Small devices (landscape phones, less than 768px) */
+@media screen and (max-width: 768px) { 
+  .input_wrapper {
+    width: 100%;
+    /* border: 1px solid red; */
+  }
+  
+  .form_label {
+    display: flex;
+    flex-direction: column;
+    gap: 3px;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 18px;
+    color: var(--gray);
+  }
+  
+  .form_label .input {
+    width: 100%;
+    height: 45px;
+    padding: 0 5px;
+    font-size: 14px;
+    border-radius: 5px;
+    background-color: var(--white);
+    border: 1px solid var(--border);
+  }
+  
+  .form_label .input:focus {
+    border: none;
+    outline: 0.5px solid var(--primary-color);
+  }
+  
+  .form_errors {
+    color: var(--danger);
+    font-size: 12px;
+  }
+  
+
+}
+
+
+
+/* // X-Small devices (portrait phones, less than 576px) */
+/* @media (max-width: 575.98px) {  } */
