--- a/src/index.css
+++ b/src/index.css
@@ -44,7 +44,7 @@ body {
   padding: 0 50px;
 }
 
-.auth_wrapper {
+.auth_body .auth_wrapper {
   width: 714px;
   background-color: var(--auth-wrapper-bgcolor);
   margin: 55px auto;
@@ -55,15 +55,64 @@ body {
   place-items: center;
 }
 
-.auth_wrapper .close_form {
+.auth_wrapper .auth_main {
+  padding: 0 10px 50px;
+  width: 100%;
+  /* border: 1px solid red; */
+}
+
+.auth_wrapper .auth_main .close_form {
   position: absolute;
   right: 40px;
   top: 40px;
 }
 
 
+/* For option selects */
+.option_select_label {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+  color: var(--gray);
+  position: relative;
+  /* border: 1px solid red; */
+}
 
-/* // Large devices (desktops, less than 1200px) */
+.option_select_label select {
+  width: 100%;
+  height: 55px;
+  padding: 0 20px;
+  font-size: 16px;
+  border-radius: 10px;
+  background-color: var(--white);
+  border: 1px solid var(--border);
+  -webkit-appearance: none;
+    -moz-appearance: none;
+}
+
+.option_select_label select:focus {
+  outline: 0.5px solid var(--primary-color);
+  border: none;
+}
+
+.option_select_label .items_per_page_icon {
+  position: absolute;
+  top: 46px;
+  right: 20px;
+}
+
+.option_select_label .option_select_errors {
+  font-size: 12px;
+  margin: 0;
+  color: var(--danger);
+}
+
+
+
+/* // Large devices (desktops, less than 1024px) */
 @media screen and (max-width: 1024px) { 
   .auth_body {
     padding: 0 30px;
@@ -74,25 +123,25 @@ body {
 
 
 /* // Medium devices (tablets, less than 992px) */
-@media screen and (max-width: 991.98px) {
+@media screen and (max-width: 992px) {
   .auth_body {
     width: 100%;
     padding: 0 20px;
   }
   
-  .auth_wrapper {
+  .auth_body .auth_wrapper {
     width: 100%;
     margin: 25px auto;
     padding: 20px 0;
   }
   
-  .auth_wrapper .close_form {
+  .auth_wrapper .auth_main .close_form {
     position: absolute;
     right: 40px;
     top: 40px;
   }
 
-  .auth_wrapper .close_form img {
+  .auth_wrapper .auth_main .close_form img {
     width: 25px;
   }
 }
@@ -102,7 +151,7 @@ body {
 /* // Small devices (landscape phones, less than 768px) */
 @media screen and (max-width: 768px) { 
   .auth_body {
-    padding: 0 20px;
+    padding: 20px;
     margin: 0;
     width: 100%;
     box-sizing: border-box;
@@ -111,17 +160,41 @@ body {
   .auth_body .auth_wrapper {
     margin: 20px auto;
     border-radius: 10px;
-    /* border: 1px solid red; */
+  }
+
+  .auth_wrapper .auth_main {
+    width: 100%;
   }
   
-  .auth_wrapper .close_form {
+  .auth_wrapper .auth_main .close_form {
     position: absolute;
     right: 15px;
     top: 15px;
   }
 
-  .auth_wrapper .close_form img {
+  .auth_wrapper .auth_main .close_form img {
     width: 15px;
+  }
+
+
+  /* For option selects */
+.option_select_label {
+  gap: 3px;
+  font-size: 12px;
+  line-height: 18px;
+}
+
+  .option_select_label select {
+    height: 45px;
+    padding: 0 5px;
+    font-size: 14px;
+    border-radius: 5px;
+  }
+
+  .option_select_label .items_per_page_icon {
+    position: absolute;
+    top: 35px;
+    right: 10px;
   }
 
 }
