--- a/src/assets/styles/Dashboard.module.css
+++ b/src/assets/styles/Dashboard.module.css
@@ -40,7 +40,7 @@
 
 .wallet_and_credit_wrapper {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 3fr 2fr;
   grid-template-rows: 1fr;
   margin: 50px 0;
   gap: 24px;
@@ -214,6 +214,16 @@
 }
 
 
+/* // Xtra Large devices (desktops, less than 1024px) */
+@media screen and (max-width: 1440px) {
+.wallet_and_credit_wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr;
+  margin: 50px 0;
+  gap: 24px;
+}
+}
 
 
 /* // Large devices (desktops, less than 1024px) */
